# test_4f3u9

./: README.md
gnode_tasks/: gnode.py  task_1.py  task_2.py
task_3/: main.py
task_3/test_cases/: 1.txt
task_4/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
task_4/data/: documents.json  tags.json
task_4/src/: app.py
task_4/src/api/: content.py  setup.py
task_4/src/core/: values.py
task_4/src/entities/: documents.py  tags.py
